--- a/react-part/kumon_project/src/App.css
+++ b/react-part/kumon_project/src/App.css
@@ -15,6 +15,11 @@
   justify-content: space-between; /* This will space the content of the workContainer elements evenly across the width of the workContainer */
 }
 
+.center-text {
+  text-align: center;
+  justify-content: center;
+}
+
 .math, .eng {
   display: flex;
   flex-direction: column;
@@ -141,6 +146,16 @@
   justify-content: center;
   height: 260px;
 }
+.filterButton {
+  height: 48px;
+  width: 10vw;
+  font-size: large;
+  border-radius: 8px;
+  border: 1px solid grey;
+  margin-top: 10%;
+  margin-bottom: 10px;
+
+}
 
 .inputContainer {
   display: flex;
@@ -178,4 +193,7 @@
   border-radius: 8px;
   border: 1px solid grey;
   margin-left: 1vh;
+}
+.bottom_button {
+  margin-top: 20vh;
 }
